Fix words being cut off

--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
     /* https://stackoverflow.com/questions/18229387/wrap-a-long-single-word-using-css */
-    word-wrap: break-word;
-    word-break: break-all;
+    /* This was cutting of mid word */
+    /*word-wrap: break-word;
+    word-break: break-all;*/
 }
 
 /* https://tobiasahlin.com/blog/flexbox-break-to-new-row/ */
@@ -102,6 +103,16 @@ nav a {
 
 .holidayBox .country {
     float: right;
+}
+
+.holidayBox .priceDuration {
+    width: auto;
+    display: inline-block;
+    
+    padding: 2px;
+    padding-left: 5px;
+
+    background-color: rgb(255, 255, 255, 0.7);
 }
 
 .holidayBox .description {
